@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -11,7 +11,7 @@
 #pragma once
 
 
-#include <fost/detail/tagged-string.hpp>
+#include <fost/tagged-string.hpp>
 #include <boost/array.hpp>
 #include <boost/range/functions.hpp>
 
