@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2009, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -12,7 +12,7 @@
 
 
 #include <fost/nullable.hpp>
-#include <fost/detail/tagged-string.hpp>
+#include <fost/tagged-string.hpp>
 
 
 namespace fostlib {
